--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Perry's Favorite Cat</title>
+    <a href="https://flatironschool.com/">Flatiron School</a>
 </head>
 <body>
     <h1>Hello, World!</h1>
